name:                elrikgroup-dialogue-flow
version:             0.1.0.1
-- synopsis:
description: Interact w/ DialogueFlow and expose the bridge through Scotty.
location: https://github.com/ElrikGroupCo/elrikgroup-dialogue-flow
license:             BSD3
license-file:        LICENSE
author:              Dante Elrik Joseph
maintainer:          example@example.com
copyright:           Soli Deo Gloria
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Example
  build-depends:       aeson
                     , base >= 4.7 && < 5
                     , bytestring >= 0.10.8.1
                     , data-default >= 0.7.1.1
                     , scotty
                     , text >= 1.2.2.2
                     , text >= 1.2.2.2
                     , unordered-containers >= 0.2.8.0
                     , wai
  default-language:    Haskell2010

executable elrikgroup-dialogue-flow-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , bytestring >= 0.10.8.1
                     , data-default >= 0.7.1.1
                     , elrikgroup-dialogue-flow
                     , text >= 1.2.2.2
                     , text >= 1.2.2.2
                     , unordered-containers >= 0.2.8.0

  default-language:    Haskell2010

test-suite elrikgroup-dialogue-flow-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       aeson
                     , base
                     , bytestring >= 0.10.8.1
                     , data-default >= 0.7.1.1
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , http-types
                     , elrikgroup-dialogue-flow
                     , text >= 1.2.2.2
                     , text >= 1.2.2.2
                     , unordered-containers >= 0.2.8.0
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ElrikGroupCo/elrikgroup-dialogue-flow
